--- a/package.json
+++ b/package.json
@@ -5,5 +5,11 @@
   "license": "UNLICENSED",
   "dependencies": {
     "mapbox-gl": "^2.3.1"
+  },
+  "engines": {
+    "node": "14.x"
+  },
+  "scripts": {
+    "start": "node index.js"
   }
 }
