--- a/package.json
+++ b/package.json
@@ -6,10 +6,7 @@
   "dependencies": {
     "mapbox-gl": "^2.3.1"
   },
-  "engines": {
-    "node": "14.x"
-  },
   "scripts": {
-    "start": "node app.js"
+    "start": "node ./lib/app.js"
   }
 }
