--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
   "license": "UNLICENSED",
   "dependencies": {
     "mapbox-gl": "^2.3.1"
+  },
+  "scripts": {
+    "start": "node ./server.js"
   }
 }
